# address_helper

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  architecture.md  dev.requirements.txt  links.toml  osm-filter-spec.md  pyproject.toml  specs.md
.github/workflows/: build-address-db.yml  integration-tests.yml
.tools/: Dockerfile  README_DOCKER.md  create_minified_pbf.sh  create_street_postcode_city_only_pbf.py  docker-compose.yml  upload_s3.sh  upload_static_osmosis_page.sh
address_standardizer/: __init__.py  address.py  cache.py  db.py  downloader.py  index.py  postcode_filter.py  query.py
address_standardizer/data/: __init__.py  links.toml
address_standardizer/models/: __init__.py  region.py
tests/: conftest.py  real_addresses_fixture.py  test_address.py  test_address_match.py  test_db_search.py  test_downloader.py  test_integration_addresses.py  test_models.py  test_postcode_filter.py
