[project]
name = "address-standardizer"
version = "0.1.0"
description = "A Python library that parses and standardizes address strings using OpenStreetMap data"
requires-python = ">=3.10"
authors = [{name = "Rafal Kuka", email = "rafal.kuka94@gmail.com"}]
license = {text = "MIT"}
dependencies = [
    "osmium>=3.0.0",
    "shapely>=2.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.targets.wheel]
packages = ["address_standardizer"]

[tool.hatchling.targets.wheel.force-include]
"address_standardizer/data" = "address_standardizer/data"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=address_standardizer --cov-report=term-missing"
